--- a/gdx-themes/src/raeleus-shade/gdx-themesRaeleus-shade.gradle
+++ b/gdx-themes/src/raeleus-shade/gdx-themesRaeleus-shade.gradle
@@ -21,6 +21,7 @@ main.resources.setSrcDirs([]);
 test.java.setSrcDirs([]);
 test.resources.setSrcDirs([]);
 main.resources.srcDir("$rootDir/gdx-themes/src/raeleus-shade/resources")
+main.java.srcDir("$rootDir/gdx-themes/src/raeleus-shade/java")
 
 dependencies {
     api project(path: ":gdx-themes-raeleus")
