--- a/demo/src/jreApi/demoJreApi.gradle
+++ b/demo/src/jreApi/demoJreApi.gradle
@@ -18,13 +18,11 @@ main.java.setSrcDirs([]);
 main.resources.setSrcDirs([]);
 test.java.setSrcDirs([]);
 test.resources.setSrcDirs([]);
-main.resources.srcDir("$rootDir/gdx-themes/src/raeleus-sgx/resources")
-main.java.srcDir("$rootDir/gdx-themes/src/raeleus-sgx/java")
 
 dependencies {
-    api project(path: ":gdx-themes-raeleus")
+    api project(path: ":demo-api")
 }
-// Setup publishing to coordinates: net.wti:gdx-themes-raeleus-sgx
+// Setup publishing to coordinates: net.wti:demo-api-jre
 project.extensions.add('xapi.mvn.repo', "$rootDir/repo")
 Task xapiPublish = tasks.create('xapiPublish')
 xapiPublish.group = 'Publishing'
@@ -50,8 +48,8 @@ ext.publications.create("xapi", MavenPublication, {
                 pub.from(components.named('java').get())
             }
         }
-        pub.artifactId = "gdx-themes-raeleus-sgx"
+        pub.artifactId = "demo-api-jre"
         pub.groupId = "net.wti"
 })
 // GenEnd net.wti.gradle.settings.plugin.XapiSettingsPlugin
-// Done generating buildfile for :gdx-themes at file://$rootDir/gdx-themes/src/raeleus-sgx/gdx-themesRaeleus-sgx.gradle
+// Done generating buildfile for :demo at file://$rootDir/demo/src/jreApi/demoJreApi.gradle
