--- a/demo/src/main/demoMain.gradle
+++ b/demo/src/main/demoMain.gradle
@@ -1,10 +1,12 @@
 plugins {
+    // GenInclude plugin from file:///opt/wti-ui/demo/src/gradle/main/plugins
+    id	"groovy"
     id	"java-library"
     id	"maven-publish"
 }
+
 // GenStart net.wti.gradle.settings.plugin.XapiSettingsPlugin
 ext.xapiModern = 'true'
-
 java.toolchain.languageVersion = JavaLanguageVersion.of(8)
 repositories.mavenCentral()
 // setup sourcesets
@@ -18,13 +20,18 @@ main.java.setSrcDirs([]);
 main.resources.setSrcDirs([]);
 test.java.setSrcDirs([]);
 test.resources.setSrcDirs([]);
-main.resources.srcDir("$rootDir/gdx-themes/src/raeleus-sgx/resources")
-main.java.srcDir("$rootDir/gdx-themes/src/raeleus-sgx/java")
+main.java.srcDir("$rootDir/demo/src/main/java")
+test.groovy.srcDir("$rootDir/demo/src/test/groovy")
 
 dependencies {
-    api project(path: ":gdx-themes-raeleus")
+    implementation project(path: ":gdx-themes-raeleus-sgx")
+    implementation project(path: ":xapi-ui-main")
+    implementation libs.xapi.util
+    testImplementation libs.spock
+    testImplementation libs.xapi.model.jre
+    api project(path: ":demo-api")
 }
-// Setup publishing to coordinates: net.wti:gdx-themes-raeleus-sgx
+// Setup publishing to coordinates: net.wti:demo
 project.extensions.add('xapi.mvn.repo', "$rootDir/repo")
 Task xapiPublish = tasks.create('xapiPublish')
 xapiPublish.group = 'Publishing'
@@ -50,8 +57,12 @@ ext.publications.create("xapi", MavenPublication, {
                 pub.from(components.named('java').get())
             }
         }
-        pub.artifactId = "gdx-themes-raeleus-sgx"
+        pub.artifactId = "demo"
         pub.groupId = "net.wti"
 })
 // GenEnd net.wti.gradle.settings.plugin.XapiSettingsPlugin
-// Done generating buildfile for :gdx-themes at file://$rootDir/gdx-themes/src/raeleus-sgx/gdx-themesRaeleus-sgx.gradle
+// GenInclude body.end from file:///opt/wti-ui/demo/src/gradle/main/body.end
+tasks.withType(Test).configureEach {
+    useJUnitPlatform()
+}
+// Done generating buildfile for :demo at file://$rootDir/demo/src/main/demoMain.gradle
