--- a/gdx-themes/src/raeleus-sgx/gdx-themesRaeleus-sgx.gradle
+++ b/gdx-themes/src/raeleus-sgx/gdx-themesRaeleus-sgx.gradle
@@ -1,19 +1,19 @@
 plugins {
+    // GenInclude plugin from file:///opt/wti-ui/gdx-themes/src/raeleus-sgx/gradle/plugins
+    id "net.wti.gradle.font" version "$xapiVersion"
     id	"java-library"
     id	"maven-publish"
 }
+
 // GenStart net.wti.gradle.settings.plugin.XapiSettingsPlugin
 ext.xapiModern = 'true'
-
 java.toolchain.languageVersion = JavaLanguageVersion.of(8)
 repositories.mavenCentral()
 // setup sourcesets
 
 SourceSet main = sourceSets.maybeCreate('main');
 
-
 SourceSet test = sourceSets.maybeCreate('test');
-
 main.java.setSrcDirs([]);
 main.resources.setSrcDirs([]);
 test.java.setSrcDirs([]);
@@ -54,4 +54,37 @@ ext.publications.create("xapi", MavenPublication, {
         pub.groupId = "net.wti"
 })
 // GenEnd net.wti.gradle.settings.plugin.XapiSettingsPlugin
+// GenInclude body.end from file:///opt/wti-ui/gdx-themes/src/raeleus-sgx/gradle/body.end
+xapiFonts {
+    outputName = 'sgx-fonts'
+    googleFont 'Questrial', {
+        charFile = file("$rootDir/text-chars.txt")
+        addSizedWeight 72, 72, 'Regular', 8
+        addSizedWeight 96, 96, 'Regular', 12
+        addSizedWeight 132, 132, 'Regular', 18
+        addSizedWeight 160, 160, 'Regular', 24
+    }
+    googleFont 'NotoSansSymbols2', {
+        charFile = file("$rootDir/noto-sans-symbol-2-chars.txt")
+        // with only three symbols, these can take up very little space
+        addSizedWeight 120, 20, 'Regular', 18
+        addSizedWeight 144, 26, 'Regular', 24
+    }
+    googleFont 'PlayfairDisplay', {
+        extraUrl = '[wght]'
+        charFile = file("$rootDir/playfair-display-chars.txt")
+        addSizedWeight 16, 8, '', 18
+        addSizedWeight 22, 10, '', 24
+    }
+}
+def packFonts = tasks.named('packFonts')
+tasks.register('copyFonts', Copy) {
+    from(project.provider({packFonts.get().outputs.files}))
+    into('resources/cc-by-4/raeleus/sgx/')
+    dependsOn packFonts
+    duplicatesStrategy = 'INCLUDE'
+}
+packFonts.configure {
+    finalizedBy 'copyFonts'
+}
 // Done generating buildfile for :gdx-themes at file://$rootDir/gdx-themes/src/raeleus-sgx/gdx-themesRaeleus-sgx.gradle
