--- a/components/src/main/componentsMain.gradle
+++ b/components/src/main/componentsMain.gradle
@@ -16,6 +16,7 @@ main.java.setSrcDirs([]);
 main.resources.setSrcDirs([]);
 test.java.setSrcDirs([]);
 test.resources.setSrcDirs([]);
+main.java.srcDir("$rootDir/components/src/main/java")
 
 dependencies {
     api project(path: ":components-ui")
