--- a/wti-ui/src/implTime/wti-uiImplTime.gradle
+++ b/wti-ui/src/implTime/wti-uiImplTime.gradle
@@ -1,5 +1,6 @@
 plugins {
     id	"java-library"
+    id	"groovy"
     id	"maven-publish"
 }
 // GenStart net.wti.gradle.settings.plugin.XapiSettingsPlugin
@@ -16,19 +17,18 @@ main.java.setSrcDirs([]);
 main.resources.setSrcDirs([]);
 test.java.setSrcDirs([]);
 test.resources.setSrcDirs([]);
+main.java.srcDir("$rootDir/wti-ui/src/implTime/java")
+test.java.srcDir("$rootDir/wti-ui/src/implTimeTest/java")
+test.groovy.srcDir("$rootDir/wti-ui/src/implTimeTest/groovy")
 
 dependencies {
-    implementation libs.spock
-    implementation libs.xapi.model.jre
-    api project(path: ":wti-ui-controls")
+    implementation project(path: ":wti-ui-api")
+    testImplementation libs.spock
+    testImplementation libs.xapi.model.jre
     api project(path: ":wti-ui-time")
-    api project(path: ":wti-ui-color")
-    api project(path: ":wti-ui-image")
-    api project(path: ":wti-ui-scene")
-    api project(path: ":wti-ui-event")
-    api project(path: ":wti-ui-modelbind")
+    api project(path: ":wti-ui-implApi")
 }
-// Setup publishing to coordinates: net.wti:wti-ui
+// Setup publishing to coordinates: net.wti:wti-ui-time-impl
 project.extensions.add('xapi.mvn.repo', "$rootDir/repo")
 Task xapiPublish = tasks.create('xapiPublish')
 xapiPublish.group = 'Publishing'
@@ -54,8 +54,15 @@ ext.publications.create("xapi", MavenPublication, {
                 pub.from(components.named('java').get())
             }
         }
-        pub.artifactId = "wti-ui"
+        pub.artifactId = "wti-ui-time-impl"
         pub.groupId = "net.wti"
 })
 // GenEnd net.wti.gradle.settings.plugin.XapiSettingsPlugin
-// Done generating buildfile for :wti-ui at file://$rootDir/wti-ui/src/main/wti-uiMain.gradle
+// GenInclude body.end from file:///opt/wti-ui/wti-ui/src/implTime/gradle/body.end
+tasks.named('test').configure {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+}
+// Done generating buildfile for :wti-ui at file://$rootDir/wti-ui/src/implTime/wti-uiImplTime.gradle
