--- a/wti-ui/src/jreTime/wti-uiJreTime.gradle
+++ b/wti-ui/src/jreTime/wti-uiJreTime.gradle
@@ -18,12 +18,10 @@ test.java.setSrcDirs([]);
 test.resources.setSrcDirs([]);
 
 dependencies {
-    implementation libs.spock
-    implementation libs.xapi.model.jre
-    api project(path: ":gdx-api-ui")
-    api project(path: ":gdx-api-inventory")
+    api project(path: ":wti-ui-implTime")
+    api project(path: ":wti-ui-jreApi")
 }
-// Setup publishing to coordinates: net.wti:gdx-api
+// Setup publishing to coordinates: net.wti:wti-ui-time-jre
 project.extensions.add('xapi.mvn.repo', "$rootDir/repo")
 Task xapiPublish = tasks.create('xapiPublish')
 xapiPublish.group = 'Publishing'
@@ -49,8 +47,8 @@ ext.publications.create("xapi", MavenPublication, {
                 pub.from(components.named('java').get())
             }
         }
-        pub.artifactId = "gdx-api"
+        pub.artifactId = "wti-ui-time-jre"
         pub.groupId = "net.wti"
 })
 // GenEnd net.wti.gradle.settings.plugin.XapiSettingsPlugin
-// Done generating buildfile for :gdx-api at file://$rootDir/gdx-api/src/main/gdx-apiMain.gradle
+// Done generating buildfile for :wti-ui at file://$rootDir/wti-ui/src/jreTime/wti-uiJreTime.gradle
