--- a/wti-ui/src/time/wti-uiTime.gradle
+++ b/wti-ui/src/time/wti-uiTime.gradle
@@ -16,19 +16,14 @@ main.java.setSrcDirs([]);
 main.resources.setSrcDirs([]);
 test.java.setSrcDirs([]);
 test.resources.setSrcDirs([]);
+main.java.srcDir("$rootDir/wti-ui/src/time/java")
 
 dependencies {
-    implementation libs.spock
-    implementation libs.xapi.model.jre
-    api project(path: ":wti-ui-controls")
-    api project(path: ":wti-ui-time")
-    api project(path: ":wti-ui-color")
-    api project(path: ":wti-ui-image")
-    api project(path: ":wti-ui-scene")
-    api project(path: ":wti-ui-event")
-    api project(path: ":wti-ui-modelbind")
+    api libs.xapi.model
+    api libs.xapi.util
+    api project(path: ":wti-ui-api")
 }
-// Setup publishing to coordinates: net.wti:wti-ui
+// Setup publishing to coordinates: net.wti:wti-ui-time
 project.extensions.add('xapi.mvn.repo', "$rootDir/repo")
 Task xapiPublish = tasks.create('xapiPublish')
 xapiPublish.group = 'Publishing'
@@ -54,8 +49,8 @@ ext.publications.create("xapi", MavenPublication, {
                 pub.from(components.named('java').get())
             }
         }
-        pub.artifactId = "wti-ui"
+        pub.artifactId = "wti-ui-time"
         pub.groupId = "net.wti"
 })
 // GenEnd net.wti.gradle.settings.plugin.XapiSettingsPlugin
-// Done generating buildfile for :wti-ui at file://$rootDir/wti-ui/src/main/wti-uiMain.gradle
+// Done generating buildfile for :wti-ui at file://$rootDir/wti-ui/src/time/wti-uiTime.gradle
